# vacancy_analyzer

./: .gitignore  README.md  pyproject.toml
src/vacancy_analyzer/: api.py  json_saver.py  main.py  utils.py  vacancy.py
tests/: test_api.py  test_vacancy.py
