[project]
name = "vacancy-analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "Admin",email = "ulb9@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
